--- a/css/Register.css
+++ b/css/Register.css
@@ -63,13 +63,35 @@ body{
 }
 
 .box select {
-    position: relative;
-    font-family: Arial;
-    width: 100%;
-    padding: 16px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #9b59b6;
-  }
+    margin: 50px;
+    width: 150px;
+    padding: 5px 35px 5px 5px;
+    font-size: 16px;
+    border: 2px solid #9b59b6;
+    height: 34px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url(http://www.stackoverflow.com/favicon.ico) 96% / 15% no-repeat #EEE;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+  .box select::-ms-expand {
+    display: none; /* Hide the default arrow in Internet Explorer 10 and Internet Explorer 11 */
+}
+
+/* Target Internet Explorer 9 to undo the custom arrow */
+@media screen and (min-width:0\0) {
+    select {
+        background: none\9;
+        padding: 5px\9;
+    }
+}
+
+  .box select:focus{
+    width: 280px;
+    border-color: #9b59b6;
+}
 
   
