--- a/css/Login.css
+++ b/css/Login.css
@@ -1,8 +1,10 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: Centyry Gothic;
-    background: #2ecc71;
+    text-align: center;
+    font-family: Courier New Gothic;
+    background: url(../school_contact.jpg);
+    background-size: cover;
 }
 
 .box{
@@ -12,8 +14,9 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #27ae60;
+    background:rgba(46, 204, 113,0.5);
     text-align: center;
+    border-radius: 24px;
 }
 
 .box h1{
@@ -21,14 +24,50 @@ body{
     text-transform: uppercase;
     font-weight: 500;
 }
+.box h3{
+    color: white;
+    background: none;  
+	float:right;
+	list-style-type:  none;
+	margin-top: 10px;
+	text-align:center;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+a.button{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#4eb5f1;
+    text-align:center;
+    transition: all 0.2s;
+    }
+    
+a.button:hover{
+    background-color:#4095c6;
+    }
+
+@media all and (max-width:30em){
+     a.button{
+    display: block;
+    margin:0.2em auto;
+}
+}
 
 .box input[type = "text"],.box input[type = "password"]{
-    border: 0;
-    background: none;  
+    border: 0;  
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #9b59b6;
+    border: 2px solid #da7bff;
     padding: 14px 10px;
     width: 200px;
     outline: none;
@@ -39,7 +78,7 @@ body{
 
 .box input[type = "text"]:focus,.box input[type = "password"]:focus{
     width: 280px;
-    border-color: #9b59b6;
+    border-color: #da7bff;
 }
 
 .box input[type = "submit"]{
@@ -48,7 +87,7 @@ body{
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #9b59b6;
+    border: 2px solid #da7bff;
     padding: 14px 40px;
     outline: none;
     color: white;
@@ -58,5 +97,5 @@ body{
 }
 
 .box input[type = "submit"]:hover{
-    background: #9b59b6;
+    background: #da7bff;
 }
