--- a/css/Register.css
+++ b/css/Register.css
@@ -63,17 +63,20 @@ body{
 }
 
 .box select {
-    margin: 50px;
-    width: 150px;
-    padding: 5px 35px 5px 5px;
+    border: 0;
+    background: none;  
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    width: 200px;
+    padding: 14px 10px;
     font-size: 16px;
     border: 2px solid #9b59b6;
-    height: 34px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background: url(http://www.stackoverflow.com/favicon.ico) 96% / 15% no-repeat #EEE;
-    transition: 0.25s;
+    color: #9b59b6;
+    border-radius: 24px;
     cursor: pointer;
 }
 
