--- a/css/Register.css
+++ b/css/Register.css
@@ -1,76 +1,86 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: Centyry Gothic;
-    background: #2ecc71;
-    
-}
-
-.box{
-    width: 300px;
-    padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #27ae60;
-    text-align: center;
-}
-
-.box h1{
+/* Bordered form */
+form {
+    border: 3px solid #f1f1f1;
+    background-image: url(../school_contact.jpg);
+    background-size: cover;
+  }
+  
+  /* Full-width inputs */
+  input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 5 px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  /* Set a style for all buttons */
+  button {
+    background-color: #4CAF50;
     color: white;
-    text-transform: uppercase;
-    font-weight: 500;
-}
-
-.box input[type = "text"],.box input[type = "password"]{
-    border: 0;
-    background: none;  
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #9b59b6;
-    padding: 14px 10px;
-    width: 200px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
-}
-
-.box input[type = "text"]:focus,.box input[type = "password"]:focus{
-    width: 280px;
-    border-color: #9b59b6;
-}
-
-.box input[type = "submit"]{
-    border: 0;
-    background: none;  
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #9b59b6;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 24px;
-    transition: 0.25s;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
     cursor: pointer;
-}
+    width: 100%;
+  }
+  
+  /* Add a hover effect for buttons */
+  button:hover {
+    opacity: 0.8;
+  }
+  
+  /* Extra style for the cancel button (red) */
+  .cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+  }
+  
+  /* Center the avatar image inside this container */
+  .imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+  }
+  
+  /* Avatar image */
+  img.avatar {
+    width: 40%;
+    border-radius: 50%;
+  }
+  
+  /* Add padding to containers */
+  .container {
+    padding: 16px;
+  }
+  
+  /* The "Forgot password" text */
+  span.psw {
+    float: right;
+    padding-top: 16px;
+  }
+  
+  /* Change styles for span and cancel button on extra small screens */
+  @media screen and (max-width: 300px) {
+    span.psw {
+      display: block;
+      float: none;
+    }
+    .cancelbtn {
+      width: 100%;
+    }
+  }
 
-.box input[type = "submit"]:hover{
-    background: #9b59b6;
-}
-
-.box select {
+.form select {
     border: 0;
     background: none;  
     display: block;
     margin: 20px auto;
     text-align: center;
-    width: 200px;
+    width: 400px;
     padding: 14px 10px;
-    font-size: 16px;
+    font-size: 32 px;
     border: 2px solid #9b59b6;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -80,7 +90,7 @@ body{
     cursor: pointer;
 }
 
-  .box select::-ms-expand {
+  .form select::-ms-expand {
     display: none; /* Hide the default arrow in Internet Explorer 10 and Internet Explorer 11 */
 }
 
@@ -92,7 +102,7 @@ body{
     }
 }
 
-  .box select:focus{
+  .form select:focus{
     width: 280px;
     border-color: #9b59b6;
 }
