--- a/css/Register.css
+++ b/css/Register.css
@@ -15,6 +15,8 @@ form {
     box-sizing: border-box;
   }
   
+  
+  
   /* Set a style for all buttons */
   button {
     background-color: #4CAF50;
@@ -53,8 +55,33 @@ form {
   /* Add padding to containers */
   .container {
     padding: 16px;
+
+    
   }
-  
+  .container h1{
+    color:  #00b3b3;
+    font-size: 40px;
+    font-family: Courier New;
+    stroke-width: 2px;
+    stroke: aliceblue;
+    }
+    .container p{
+        color:  #ffffff;
+        font-size: 30px;
+        font-family: Courier New;
+        stroke-width: 2px;
+        stroke: aliceblue;
+        }
+      
+    .container label{
+        color:  #ffffff;
+        font-size: 30px;
+        font-family: Courier New;
+        stroke-width: 2px;
+        stroke: aliceblue;
+        }
+    
+          
   /* The "Forgot password" text */
   span.psw {
     float: right;
@@ -71,40 +98,70 @@ form {
       width: 100%;
     }
   }
+  
+  .demo {
+    margin: 100px auto;
+  }
 
-.form select {
-    border: 0;
-    background: none;  
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    width: 400px;
-    padding: 14px 10px;
-    font-size: 32 px;
-    border: 2px solid #9b59b6;
+  .dropdown-container {
+    width: 250px;
+    margin: 100px auto;
+    position: relative;
+  }
+
+  select {
+    width: 100%;
+    height: 50px;
+    font-size: 100%;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 0;
+    background-color: #c0392b;
+    border: none;
+    border-bottom: 2px solid #962d22;
+    color: white;
+    appearance: none;
+    padding: 10px;
+    padding-right: 38px;
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none;
-    color: #9b59b6;
-    border-radius: 24px;
-    cursor: pointer;
-}
+    transition: color 0.3s ease, background-color 0.3s ease, border-bottom-color 0.3s ease;
+  }
 
-  .form select::-ms-expand {
-    display: none; /* Hide the default arrow in Internet Explorer 10 and Internet Explorer 11 */
-}
+  /* For IE <= 11 */
+  select::-ms-expand {
+    display: none; 
+  }
 
-/* Target Internet Explorer 9 to undo the custom arrow */
-@media screen and (min-width:0\0) {
-    select {
-        background: none\9;
-        padding: 5px\9;
-    }
-}
+  .select-icon {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    width: 30px;
+    height: 36px;
+    pointer-events: none;
+    border: 2px solid #962d22;
+    padding-left: 5px;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+  }
+  .select-icon .icon {
+    transition: fill 0.3s ease;
+    fill: white;
+  }
 
-  .form select:focus{
-    width: 280px;
-    border-color: #9b59b6;
-}
-
+  select:hover,
+  select:focus {
+    color: #c0392b;
+    background-color: white;
+    border-bottom-color: #DCDCDC;
+  }
+  select:hover ~ .select-icon,
+  select:focus ~ .select-icon {
+    background-color: white;
+    border-color: #DCDCDC;
+  }
+  select:hover ~ .select-icon svg.icon,
+  select:focus ~ .select-icon svg.icon {
+    fill: #c0392b;
+  }
   
