--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -2,17 +2,18 @@
 
 body {
   font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
+	font-family:  Courier New Gothic;
   line-height: 1.5em;
   padding: 0;
   margin: 0;
-  background-color: #f4f4f4;
+  background: url(../school_contact.jpg);
+  background-size: cover;
 }
 
 /* Global */
 
 .container {
-  width: 80%;
+  width: 100%;
   margin: auto;
   overflow: hidden;
 }
@@ -79,8 +80,15 @@ header #logo {
 
 header #logo h1 {
   margin-top: 9px;
+  margin-left: 10px;
   font-family: 'Permanent Marker', cursive;
   font-size: 40px;
+}
+header #logo h2 {
+  margin-top: 9px;
+  margin-left: 15px;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 20px;
 }
 
 header nav {
@@ -96,7 +104,6 @@ header a:hover {
   color: #cccccc;
 }
 
-/* Showcase */
 
 
 /* Boxes */
