--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -1,12 +1,52 @@
-body{
-	margin:0;
-	padding:0;
-	text-align: center;
-	background: url(../school_contact.jpg);
-	background-size: cover;
-	font-family:  Courier New Gothic;
 
-}
+
+/* Header */
+
+header {
+	background: #35424a;
+	color: #ffffff;
+	padding-top: 30px;
+	min-height: 70px;
+	border-bottom: #00b3b3 3px solid;
+  }
+  
+header a {
+	color: #ffffff;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 16px;
+  }
+  
+header li {
+	float: left;
+	display: inline;
+	padding: 0 20px 0 20px;
+  }
+  
+header #logo {
+	float: left;
+  }
+  
+header #logo h1 {
+	margin-top: 9px;
+	font-family: 'Permanent Marker', cursive;
+	font-size: 40px;
+  }
+  
+header nav {
+	float: right;
+	margin-top: 10px;
+  }
+  
+header .highlight, header .current a {
+	color: #00b3b3;
+  }
+  
+header a:hover {
+	color: #cccccc;
+  }
+  
+
 
 
 
@@ -31,7 +71,7 @@ body{
 
 .Media ul{
      position: absolute;
-     top:44%;
+     top:47%;
      left:50%;
      display: flex;
      transform: translate(-50%,-50%);
@@ -245,8 +285,8 @@ form .submit:hover{
 
 
 /* Full-width input fields */
-.box input[type=text],.box input[type=password] {
-  width: 80%;
+.box input[type=text],.box input[type=password],.box input[type=email] {
+  width: 40%;
   position: center;
   padding: 12px 20px;
   margin: 8px 0;
@@ -258,7 +298,7 @@ form .submit:hover{
 
 
 textarea[type=text]{
-	width: 80%;
+	width: 40%;
 	padding: 12px 20px;
 	margin: 8px 0;
 	display: inline-block;
@@ -267,8 +307,40 @@ textarea[type=text]{
 	background-color: rgba(255, 255, 255, 0.7);
   }
 
+
+  /* Sidebar */
+
+.box.aside#sidebar {
+	float: center;
+	width: 30%;
+	margin-top: 25px;
+  }
+  
+.box.aside#questions {
+	float: center;
+	width: 25%;
+	margin-top: 25px;
+  }
+
+  /* FAQ */
+
+.box.faq-title {
+	font-family: 'Playfair Display', serif;
+	font-size: 80px;
+	text-align: center;
+	margin-bottom: 55px;
+	text-decoration: underline;
+  }
+
+.box.faq-question {
+	resize: none;
+	overflow: hidden;
+  }
+  
+
 /* Set a style for all buttons */
 button {
+	display: inline;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -414,3 +486,6 @@ span.psw {
 .modal.a:hover, .modal.a:active {
 	background-color: red;
 }
+
+
+  
