--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,105 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: Centyry Gothic;
+/* Body */
+
+body{
+	font-size: 15px;
+  line-height: 1.5em;
+  padding: 0;
+  margin: 0;
+	background: url(../school_contact.jpg);
+	background-size: cover;
+	font-family:  Courier New Gothic;
 }
 
 
-header{
-	background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.2)) ,url(../school.jpg);
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+/* Header */
+
+header {
+  background: #35424a;
+  color: #ffffff;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: #00b3b3 3px solid;
+}
+
+header a {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+header li {
+  float: left;
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #logo {
+  float: left;
+
+}
+
+header #logo h1 {
+  margin-top: 9px;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 40px;
+}
+
+header nav {
+  float: right;
+  margin-top: 10px;
+}
+
+header .highlight, header .current a {
+  color: #00b3b3;
+}
+
+header a:hover {
+  color: #cccccc;
+}
+
+
+
+/* Sidebar */
+
+aside#sidebar {
+  float: right;
+  width: 30%;
+  margin-top: 25px;
+}
+
+aside#questions {
+  float: right;
+  
+  width: 25%;
+  margin-top: 25px;
+}
+
+/* Article */
+
+article#main-col {
+  float: left;
+  width: 50%;
+  margin-top: 24px;
+}
+
+article#about {
+  max-width: 400px;
+  margin: auto;
+  width: 100%;
+  margin-top: 90px;
+}
+
+.contact-info {
+  padding-left: 120px;
+}
+
+.widget {
+  position: relative;
+  top: 12.9px;
 }
 
 ul{
-
 	float:right;
 	list-style-type:  none;
 	margin-top: 10px;
@@ -23,82 +109,46 @@ ul{
     right: 10px;
 }
 
-ul li{
-	display: inline-block;
-
-
-
-}
-
-
 ul li a{
 	text-decoration: none;
 	color: #fff;
 	padding: 5px 20px;
 	border:1px solid transparent;
 	transition: 0.6s ease;
-
-
-
 }
 
 ul li a:hover{
-
-background-color: #fff;
-color:#000;
-
+  background-color: #fff;
+  color:#000;
 }
-
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 25%;
-}
-
-
 
 ul li.active a{
 	background-color: #fff;
 	color: #000;
-
 }
-
 
 .main{
 	max-width: 1200px;
 	margin:auto;
-
-
 }
 
 .title{
 	position: absolute;
-	top:40%;
+	top:50%;
 	left:50%;
 	transform:translate(-50%,-50%);
-
-
-
-
 }
 
 .title h1{
-
 	color:  #00b3b3;
 	font-size: 35px;
-	font-family: Courier New;
-
 }
 
-.button{
+.title.button{
 	position: absolute;
 	top:45%;
 	left:50%;
 	transform:translate(-50%,-50%);
-
-
 }
 
 .btn{
@@ -110,22 +160,15 @@ ul li.active a{
 	font-weight: bold;
 	font-size: 20px;
 	transition: 0.6s;
-
-
 }
 
 .btn:hover{
-
-background-color: #fff;
-color:#000;
-box-shadow: 0 0 10px #00b3b3, 0 0 40px  #00b3b3,0 0 80px #00b3b3;
-transition-delay: .2s;
-
-
+  background-color: #fff;
+  color:#000;
+  box-shadow: 0 0 10px #00b3b3, 0 0 40px  #00b3b3,0 0 80px #00b3b3;
+  transition-delay: .2s;
 } 
 
-
-body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
