--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -3,7 +3,7 @@
 body {
   font-size: 15px;
 	font-family:  Courier New Gothic;
-  line-height: 1.5em;
+  line-height: 0.5em;
   padding: 0;
   margin: 0;
   background: url(../school_contact.jpg);
@@ -25,7 +25,7 @@ ul {
 
 .button_1, .btn {
   height: 38px;
-  background: #e8491d;
+  background: #00b3b3;
   border: 0px;
   padding-left: 20px;
   padding-right: 20px;
@@ -56,9 +56,9 @@ ul {
 header {
   background: #35424a;
   color: #ffffff;
-  padding-top: 30px;
-  min-height: 70px;
-  border-bottom: #e8491d 3px solid;
+  padding-top: 20px;
+  min-height: 50px;
+  border-bottom: #00b3b3 3px solid;
 }
 
 header a {
@@ -97,7 +97,7 @@ header nav {
 }
 
 header .highlight, header .current a {
-  color: #e8491d;
+  color: #00b3b3;
 }
 
 header a:hover {
@@ -220,4 +220,192 @@ div.panel {
   resize: none;
   overflow: hidden;
 }
+
+ul{
+	float:right;
+	list-style-type:  none;
+	margin-top: 10px;
+	text-align:center;
+  position: relative;
+    top: 10px;
+    right: 10px;
+}
+
+ul li a{
+	text-decoration: none;
+	color: #fff;
+	padding: 5px 20px;
+	border:1px solid transparent;
+	transition: 0.6s ease;
+}
+
+ul li a:hover{
+  background-color: #fff;
+  color:#000;
+}
+
+ul li.active a{
+	background-color: #fff;
+	color: #000;
+}
+
+.main{
+	max-width: 1200px;
+	margin:auto;
+}
+
+.title{
+	position: absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+}
+
+.title h1{
+	color:  #00b3b3;
+	font-size: 35px;
+}
+
+
+.title.button{
+	position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+}
+
+.btn{
+  
+	border: none;
+	padding:10px ,30px;
+	color: #fff;
+	text-decoration: none;
+	font-family: Courier New;
+	font-weight: bold;
+	font-size: 20px;
+	transition: 0.6s;
+}
+
+.btn:hover{
+  background-color: #fff;
+  color:#000;
+  box-shadow: 0 0 10px #00b3b3, 0 0 40px  #00b3b3,0 0 80px #00b3b3;
+  transition-delay: .2s;
+} 
+
+
+
+
+
+
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
+
 
