--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -1,57 +1,8 @@
 
-
-/* Header */
-
-header {
-	background: #35424a;
-	color: #ffffff;
-	padding-top: 30px;
-	min-height: 70px;
-	border-bottom: #00b3b3 3px solid;
-  }
-  
-header a {
-	color: #ffffff;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-size: 16px;
-  }
-  
-header li {
-	float: left;
-	display: inline;
-	padding: 0 20px 0 20px;
-  }
-  
-header #logo {
-	float: left;
-  }
-  
-header #logo h1 {
-	margin-top: 9px;
-	font-family: 'Permanent Marker', cursive;
-	font-size: 40px;
-  }
-  
-header nav {
-	float: right;
-	margin-top: 10px;
-  }
-  
-header .highlight, header .current a {
-	color: #00b3b3;
-  }
-  
-header a:hover {
-	color: #cccccc;
-  }
-  
-
-
-
-
 .contact_title{
-	margin-top: 50px;
+	position: absolute;
+	top: 30%;
+	left: 10%;
 	color: #00b3b3;
 	font-family: Courier New;
 	font-weight: bold;
@@ -60,6 +11,7 @@ header a:hover {
 }
 
 .contact_title h1{
+	position: relative;
 	color:  #00b3b3;
 	font-size: 33px;
 	font-family: Courier New;
@@ -72,7 +24,7 @@ header a:hover {
 .Media ul{
      position: absolute;
      top:47%;
-     left:50%;
+     left:40%;
      display: flex;
      transform: translate(-50%,-50%);
      margin-right: 0;
@@ -80,9 +32,6 @@ header a:hover {
 	
 	
 }
-
-
-
 
 .Media ul li{
 	list-style: none;
@@ -99,7 +48,7 @@ header a:hover {
 	text-align: center;
 	background: #333;
 	line-height: 70px;
-	border-radius: 50%;
+	border-radius: 30%;
 	font-size: 30px;
 	color: #00b3b3;
 	transition: .5s
@@ -141,15 +90,13 @@ header a:hover {
 
 
 .wrapper h1{
+	position: relative;
 	color:  #00b3b3;
 	font-size: 20px;
 	font-family: Courier New;
 	stroke-width: 2px;
 	stroke: aliceblue;
 }
-
-
-
 
 .contact_title h2{
 	color:  #00b3b3;
@@ -177,73 +124,6 @@ header a:hover {
 	stroke: aliceblue;
 }
 
-form{
-	margin-top: 200px;
-	stroke-width: 2px;
-	stroke: aliceblue;
-}
-
-
-.form-control{
-	width:600px;
-	background:transparent;
-	border: none;
-	outline: none;
-	border-bottom: 4px solid gray;
-	color: #00b3b3;
-	font-size: 20px;
-	margin-bottom: 16px;
-	font-family: Courier New;
-	margin-bottom: 16px;
-	font-weight: bold;
-	stroke-width: 2px;
-	stroke: aliceblue;	
-
-}
-
-input{
-	height: 45px;
-	background-color: aliceblue;
-	
-}
-
-form .submit{
-	background-color: #00b3b3;
-	border-color:transparent;
-	color: #fff;
-	font-size: 20px;
-	letter-spacing: 2px;
-	font-family: Courier New;
-	height:50px;
-	margin-top: 20px;
-	transition: 0.4s ease;
-	stroke-width: 2%;
-	stroke: aliceblue;
-}
-
-
-form .submit:hover{
-	background-color:  #fff;
-	color: #000;
-	cursor: pointer;
-	box-shadow: 0 0 10px #00b3b3, 0 0 40px  #00b3b3,0 0 80px #00b3b3;
-	transition-delay: .2s;
-
-}
-
-.box {
-
-	color: #00b3b3;
-	font-family: Courier New;
-	font-weight: bold;
-	text-decoration: underline;
-	stroke-width: 2%;
-	stroke: aliceblue;
-
-}
-
-
-
 /*menou me koympia*/
 
 .main_menu ul{
@@ -259,9 +139,6 @@ form .submit:hover{
 
 .main_menu ul li{
 	display: inline-block;
-
-
-
 }
 
 
@@ -283,209 +160,3 @@ form .submit:hover{
 
 }
 
-
-/* Full-width input fields */
-.box input[type=text],.box input[type=password],.box input[type=email] {
-  width: 40%;
-  position: center;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 3px solid #00b3b3;
-  box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0.7);
-}
-
-
-textarea[type=text]{
-	width: 40%;
-	padding: 12px 20px;
-	margin: 8px 0;
-	display: inline-block;
-	border: 3px solid #00b3b3;
-	box-sizing: border-box;
-	background-color: rgba(255, 255, 255, 0.7);
-  }
-
-
-  /* Sidebar */
-
-.box.aside#sidebar {
-	float: center;
-	width: 30%;
-	margin-top: 25px;
-  }
-  
-.box.aside#questions {
-	float: center;
-	width: 25%;
-	margin-top: 25px;
-  }
-
-  /* FAQ */
-
-.box.faq-title {
-	font-family: 'Playfair Display', serif;
-	font-size: 80px;
-	text-align: center;
-	margin-bottom: 55px;
-	text-decoration: underline;
-  }
-
-.box.faq-question {
-	resize: none;
-	overflow: hidden;
-  }
-  
-
-/* Set a style for all buttons */
-button {
-	display: inline;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
-.signupbtn {
-	width: auto;
-	padding: 10px 18px;
-	background-color: #f44336;
-  }
-
-/* Center the image and position the close button */
-.imgcontainer {
-  text-align: center;
-  margin: 24px 0 12px 0;
-  position: relative;
-}
-
-img.avatar {
-  width: 40%;
-  border-radius: 50%;
-}
-
-.container {
-  padding: 16px;
-  width: 100%;
-  
-  
-
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  padding-top: 60px;
-}
-
-.modal input[type=text],.modal input[type=password] {
-	width: 100%;
-	position: center;
-	padding: 12px 20px;
-	margin: 8px 0;
-	display: inline-block;
-	border: 3px solid #00b3b3;
-	box-sizing: border-box;
-	background-color: rgba(255, 255, 255, 0.7);
-  }
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #888;
-  width: 100%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button (x) */
-.close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #000;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: red;
-  cursor: pointer;
-}
-
-/* Add Zoom Animation */
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
-}
-
-@-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)} 
-  to {-webkit-transform: scale(1)}
-}
-  
-@keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
-  .signupbtn {
-	width: 100%;
- }
-
- 
-}
-
-.modal.a:link, .modal.a:visited {
-	background-color: #f44336;
-	color: white;
-	padding: 14px 25px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-}
-
-.modal.a:hover, .modal.a:active {
-	background-color: red;
-}
-
-
-  
