--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -165,6 +165,7 @@ article#about {
 
 #faq-title {
   font-family: 'Playfair Display', serif;
+  color: #00b3b3 ;
   font-size: 40px;
   text-align: center;
   margin-bottom: 55px;
